fixed spacing issue on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@
   min-height: 100vh;
   color: whitesmoke;
   padding-top: 35px;
+  padding-bottom: 35px;
 }
 /* bulma override for notifications */
 .message {
